packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-nightly/routes.stderr
error: expected `,`
 --> tests/ui-fail-nightly/routes.rs:4:23
  |
4 |     let _ = routes![a b];
  |                       ^

error: expected identifier
 --> tests/ui-fail-nightly/routes.rs:6:24
  |
6 |     let _ = routes![a::, ];
  |                        ^

error: unexpected end of input, expected identifier
 --> tests/ui-fail-nightly/routes.rs:7:13
  |
7 |     let _ = routes![a::];
  |             ^^^^^^^^^^^^
  |
  = note: this error originates in the macro `routes` (in Nightly builds, run with -Z macro-backtrace for more info)
